Name:                Ebnf2ps
Version:             1.0.15
Synopsis:               Peter's Syntax Diagram Drawing Tool
Homepage:            https://github.com/FranklinChen/Ebnf2ps
Bug-reports:         https://github.com/FranklinChen/Ebnf2ps/issues
License:             BSD3
License-file:        LICENSE
Author:                 Peter Thiemann <thiemann@acm.org>
Maintainer:          Franklin Chen <franklinchen@franklinchen.com>
Copyright:           1993-2014
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.6
Description:            Ebnf2ps generates nice looking syntax diagrams in EPS
                        and FIG format from EBNF specifications and from yacc,
                        bison, and Happy input grammars. The diagrams can be
                        immediatedly included in TeX/LaTeX documents and in
                        texts created with other popular document preparation
                        systems.
Tested-with:         GHC==7.4.2
                   , GHC==7.6.2
                   , GHC==7.6.3
                   , GHC==7.8.1
                   , GHC==7.8.2
                   , GHC==7.8.3
                   , GHC==7.8.4
                   , GHC==7.10.1
                   , GHC==7.10.2

Extra-source-files: README.md,
          examples/ebnf.BNF examples/gofer.BNF examples/regular.BNF, examples/examples.ps,
          doc/Atom.eps, doc/ExtAtom.eps, doc/Factor.eps, doc/File.eps,
	  doc/Production_unfold.eps, doc/Nonterminal.eps,
	  doc/Production.eps, doc/String.eps, doc/Term.eps, doc/Character.eps, doc/Atom_unfold.eps,
	  doc/RAtom.eps, doc/RAtom_unfold.eps, doc/Export.eps,
	  doc/RExtAtom.eps, doc/RFactor.eps, doc/Regexp.eps,
	  doc/doc.tex, doc/doc.ps, doc/doc.pdf, src/afmpath.h, src/rgbpath.h,
	  CHANGES

Executable ebnf2ps
  Main-is:   Ebnf2ps.hs
  Hs-source-dirs: src
  Build-depends:        base < 5, containers,
                        old-time,
                        directory,
                        unix, array
  Build-tools:         happy
  Cc-options: -DAFMPATH=/usr/share/texmf-texlive/fonts/afm
  Other-modules:        
    AbstractSyntax, 
    Color, 
    CommandLine,
    Defaults,
    Ebnf2psParser, 
    EbnfLayout, 
    EbnfOutput, 
    Fig31Output, 
    Fonts,
    GrammarTransform, 
    GrammarUnfold,
    IOSupplement,
    Info,
    Lexer, 
    ParseAux,
    Parsers,
    PathExpansion, 
    PsOutput, 
    StringMatch,
    Version
source-repository head
  type: git
  location: https://github.com/FranklinChen/Ebnf2ps
